# bidon

./: .gitignore  .gitlab-ci.yml  README.md  manage.py  pyproject.toml  requirements-prod.txt  requirements.txt  sonar-project.properties
src/apps/main/: admin.py  apps.py  forms.py  middlewares.py  models.py  selectors.py  services.py  signals.py
src/apps/main/migrations/: 0001_initial.py  0002_remove_utilitaireconfiguration_ffro_path_and_more.py  0003_utilitaireconfiguration_user_config.py  0004_rename_canelle_path_utilitaireconfiguration_cannelle_path.py  0005_utilitaireconfiguration_user.py  0006_remove_utilitaireconfiguration_user_config.py  0007_bsam_marker_alter_isovitesse_file_type.py  0008_alter_bsam_marker.py  0009_isovitesse_marker_alter_bsam_marker.py  0010_bsam_select.py  0011_cas_obj_type.py  0012_etat_bsam_temp_repertory_alter_cas_obj_type.py  0013_alter_isovitesse_file_type.py  0014_row_cas_calculate_perfo_isovitesse_row_config_and_more.py  0015_remove_row_bsam_remove_row_bsam_name_and_more.py  0016_rowpair_tau.py  0017_rowpair_type.py  0018_row_row_pair.py  0019_row_bsam_name.py  0020_alter_row_flux_alter_row_row_pair.py  0021_cas_row_data_row_name.py  0022_rename_row_data_cas_row_metadata.py  0023_remove_row_row_pair_row_cas_rowpair_entry_row_and_more.py  0024_remove_rowpair_bsam_cas_revue_veine_delete_bsam.py  0025_alter_cas_iso_vitesse.py  0026_alter_cas_obj_type.py  0027_alter_cas_obj_type.py  0028_add_pisqcorr_ref.py  0029_revueveine_directory_alter_isovitesse_marker.py  0030_isovitesse_recalage_kd.py  0031_alter_isovitesse_recalage_kd.py  0032_alter_isovitesse_recalage_kd.py  0033_alter_isovitesse_recalage_kd.py  0034_alter_cas_obj_type.py  0035_alter_row_nb_blade_alter_row_omega.py  0036_revueaube.py  0037_aube.py  0038_aube_revue_aube.py  0039_remove_aube_projet_version_aube_aube_aube_and_more.py  0040_aube_work_dir.py  (+16 more)
src/apps/main/modules/: utils_perf.py
src/apps/main/urls/: __init__.py  base_urls.py  perfo_0d_urls.py  revue_aube_urls.py  revue_veine_urls.py  shenron_urls.py  y_to_yplus_urls.py
src/apps/main/views/: __init__.py  base_views.py  (+9 more)
src/config/: asgi.py  ldapauthbackend.py  urls.py  wsgi.py
src/config/settings/: base.py  ci.py  local.py  production.py  staging.py
(+63 files in other folders)
